# embedded-nfs

./: Cargo.toml  LICENSE  README.md  clippy.toml  notes.md  sdkconfig.defaults
.cargo/: config.toml
nfsserve/: Cargo.toml
nfsserve/src/: context.rs  lib.rs  nfs.rs  rpcwire.rs  tcp.rs
src/: demo_fs.rs  main.rs
