[package]
name = "embedded-nfs"
version = "0.1.0"
authors = ["Anatol Ulrich <e+github@mail.taugt.net>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = 3
lto = "fat"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = [
    "esp-idf-svc/embassy-sync",
    "esp-idf-svc/critical-section",
    "esp-idf-svc/embassy-time-driver",
]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.48", default-features = false }
esp-idf-sys = { version = "0.34.1", features = ["binstart"] }

tokio = { version = "1.36.0", features = ["rt", "net", "io-util"] }
mio = { version = "0.8.11", features = ["log"] }
anyhow = "1.0.81"
embedded-svc = "0.27.1"
esp-idf-hal = "0.43.1"
nfsserve = { path = "nfsserve", default-features = false }
async-trait = "0.1.78"

[build-dependencies]
embuild = "0.31.3"

# [patch.crates-io]
# mio = { git = "https://github.com/tokio-rs/mio", branch = "master" }
# socket2 = { git = "https://github.com/rust-lang/socket2", branch = "master" }
# tokio = { git = "https://github.com/tokio-rs/tokio", branch = "master" }
